sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: identifier expected but 'var' found.
	var inverse = true	
        ^